--- a/webpage/src/styles/_variables.scss
+++ b/webpage/src/styles/_variables.scss
@@ -15,9 +15,11 @@
     --international-label: #672292;
     --white-color: #ffffff;
     --black-color: #1A191D;
-    --role-color: #C084F5;
+    --role-color: #d7a8ff;
+    --label-color: #9babdf;
     --available-color: #088b64;
     --booked-color: #970d50;
+    --border-color: rgba(255, 255, 255, 0.4);
 
     --border-radius: 8px;
     --border-radius-img: 8px 8px 0 0;
